kleine vereinfachungen zu TicTacToe und Battleship